# snake-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: camera.rs  debug.rs  demo.rs  game.rs  main.rs  menu.rs
src/game/: borders.rs  interface.rs  meat.rs  snake.rs
web/: index.html
